# second-brain-memory

./: .gitignore  LICENSE  README.md  justfile  mcp.example.json  protocol.md  pyproject.toml  setup.sh
skills/memory-init/: SKILL.md
src/second_brain_memory/: formatters.py  models.py  server.py
src/second_brain_memory/db/: __init__.py  connection.py  memories.py  schema.py  sessions.py  stats.py
src/second_brain_memory/tools/: __init__.py  memories.py  sessions.py  stats.py
tests/: conftest.py
tests/db/: test_memories.py  test_migrations.py  test_search.py  test_sessions.py  test_stats.py
tests/tools/: test_memories.py  test_sessions.py  test_stats.py
