[project]
name = "second-brain-memory"
version = "0.2.0"
description = "Persistent memory system for AI agents via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mcp", "memory", "sqlite", "ai", "agents", "fts5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.urls]
Repository = "https://github.com/angelozdev/second-brain-memory"

[project.scripts]
second-brain-memory = "second_brain_memory.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/second_brain_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
